# ai-newsops-platform

./: .coverage  .dockerignore  .gitignore  DATA_LICENSE.md  Dockerfile  Makefile  README.md  distilbert_finetune_newsops.ipynb  docker-compose.scale.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.full.txt  requirements.txt
airflow/: README.md
app/: main.py
dashboard/: Dockerfile.streamlit  app.py  requirements.streamlit.txt
docs/: API.md  api_guide.md  architecture.md  dataset.md  decisions.md  deployment.md  load_test_comparison.md  mlops_pipeline.md  model_card.md  monitoring.md  newsops_postman_collection.json  retraining.md  specification-document.md
monitoring/: drift_detector.py  drift_log.jsonl  drift_logs.json  evidently_report.py  quick_drift_latest.json  retrain_decision.json
notebooks/: 01_eda_news_category.ipynb  distilbert_finetune_newsops.ipynb  distilbert_finetune_newsops_v2.ipynb  distilbert_lightning-v0.ipynb  distilbert_lightning.ipynb
presentation/: AI_NewsOps_Presentation_Interactive.html  AI_NewsOps_Soutenance_v1.pptx  Fiche mémo "Jour J".md  Presentation_AI_NewsOps_10min.pptx  Presentation_Premium_V2_AI_NewsOps.pptx  guide_demonstration.md  script.md  script_v2.md
prometheus/: prometheus.scale.yml  prometheus.yml
reports/: baseline_labels.txt  classification_report.txt
scripts/: generate_final_visuals.py  generate_traffic.sh  locustfile.py  patch_readme_slo.py  run_load_comparison.sh  validate_training_data.py  verify_all.sh
src/: baseline.py  evaluate.py  preprocess.py  register_model.py  retrain.py  train(2).py  (+2 more)
(+38 files in other folders)
