[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-newsops-platform"
version = "0.1.0"
description = "AI-powered Media Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mlflow>=2.5.0",
    "dvc>=3.0.0",
    "evidently>=0.4.0",
    "prometheus-client>=0.17.0",
    "sentence-transformers>=2.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv",
    ".git",
    ".dvc",
    "data",
    "models",
    "notebooks",
]

[tool.ruff.lint]
# Règles activées (erreurs, warnings, imports)
select = ["E", "F", "W", "I"]

# Règles ignorées
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (géré par Black)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["ALL"]
"src/models/train_cpu.py" = ["E402"]  # Si vous avez des imports conditionnels

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
